third_party/move/move-compiler-v2/tests/checking/typing/return_nested_tuple.exp

Diagnostics:
error: tuples cannot be nested
  ┌─ tests/checking/typing/return_nested_tuple.move:3:25
  │
3 │     public fun test(): ((u64, u64), (u64, u64)) {
  │                         ^^^^^^^^^^

error: tuples cannot be nested
  ┌─ tests/checking/typing/return_nested_tuple.move:3:37
  │
3 │     public fun test(): ((u64, u64), (u64, u64)) {
  │                                     ^^^^^^^^^^
