third_party/move/move-compiler-v2/tests/checking/typing/return_nested_tuple.move
module 0xc0ffee::m {

    public fun test(): ((u64, u64), (u64, u64)) {
        abort 0
    }
}
